fix(admin): adjusted spacing between toggles
* added bigger gap under the toggles

--- a/apps/admin-gui/src/_styles.scss
+++ b/apps/admin-gui/src/_styles.scss
@@ -1695,3 +1695,7 @@ table .mdc-text-field--outlined {
   z-index: 100;
   font-weight: bold !important;
 }
+
+.mb-25 {
+  margin-bottom: 0.75rem;
+}
